--- a/atlas-cinema-guru/src/components/general/general.css
+++ b/atlas-cinema-guru/src/components/general/general.css
@@ -80,3 +80,34 @@
     background-repeat: no-repeat;
     background-position: right 10px center;
   }
+
+
+  /*-------------------------------------------------------------------------------------------------*/
+
+  /* Button */
+  .button {
+    background-color: red;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 4px;
+    font-weight: bold;
+    text-transform: uppercase;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .button:hover {
+    background-color: darkred;
+  }
+  
+  .button:focus {
+    outline: none;
+    box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.4);
+  }
+  
+  .button svg {
+    margin-right: 8px; /* space between icon and text */
+  }
