--- a/atlas-cinema-guru/src/App.css
+++ b/atlas-cinema-guru/src/App.css
@@ -1,5 +1,17 @@
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  background-color: #1c1c1c;
+}
+
 .App {
   text-align: center;
+  background-color: #1c1c1c;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .App-header {
@@ -16,3 +28,4 @@
 .App-link {
   color: #61dafb;
 }
+
