update auth/app, added nav and dash

--- a/atlas-cinema-guru/src/routes/auth/auth.css
+++ b/atlas-cinema-guru/src/routes/auth/auth.css
@@ -103,3 +103,13 @@
   padding-left: 30px; 
   padding-bottom: 5px;
 }
+
+
+.auth-body {
+  text-align: center;
+  background-color: #1c1c1c;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
