--- a/atlas-cinema-guru/src/components/components.css
+++ b/atlas-cinema-guru/src/components/components.css
@@ -36,8 +36,6 @@
     color: #fff;
   }
 
-  /* src/components.css */
-
 .activity-item {
   color: #cccccc;
   margin-bottom: 10px;
@@ -58,7 +56,7 @@
 }
 
 .activity-item .date {
-  color: #999999;
+  color: white;
   font-style: italic;
 }
 
