--- a/atlas-cinema-guru/src/components/pages/pages.css
+++ b/atlas-cinema-guru/src/components/pages/pages.css
@@ -42,3 +42,11 @@
         width: fit-content;
       }
     
+
+      .movie-list {
+        list-style: none;
+        padding: 0;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+      }
